General exception handler added

--- a/MsmGrainGrowthGui/GrainGrowthGui.csproj
+++ b/MsmGrainGrowthGui/GrainGrowthGui.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Utility\Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="icons\" />
+  </ItemGroup>
+
 </Project>
