--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\MsmGrainGrowthGui\GrainGrowthGui.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Model\Microelements\" />
+  </ItemGroup>
+
 </Project>
